# library_app

./: .gitignore  Dockerfile.db  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: fa285f4e8b36_initialmigration.py
app/: __init__.py  database.py  di.py
app/models/: author.py  book.py
app/repositories/: book_repository.py
app/routes/: books.py
app/schemas/: book_schemas.py
app/services/: library_service.py
